--- a/01-init/package.json
+++ b/01-init/package.json
@@ -2,6 +2,9 @@
   "name": "01-init",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "build": "webpack" 
+  },
   "license": "MIT",
   "dependencies": {
     "webpack": "^4.41.0",
